--- a/templates/base.html
+++ b/templates/base.html
@@ -374,7 +374,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.dashboard') }}">
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">
                 <i class="bi bi-mortarboard"></i> Classroom Platform
             </a>
             
